@@ -47,14 +47,14 @@ Correlated Fading Generator (FIR method)
 
 Correlated Fading Generator (IFFT method)
 -----------------------------------------
-[[0.735-0.234i -0.309-0.208i 0.127-0.011i -0.051-0.100i]
- [0.722-0.204i -0.269-0.188i 0.134-0.016i -0.052-0.103i]
- [0.708-0.173i -0.229-0.169i 0.140-0.020i -0.053-0.106i]
- [0.692-0.142i -0.188-0.148i 0.146-0.025i -0.054-0.108i]
- [0.675-0.111i -0.145-0.127i 0.152-0.030i -0.055-0.110i]
- [0.657-0.080i -0.102-0.105i 0.157-0.034i -0.055-0.112i]
- [0.638-0.049i -0.059-0.083i 0.162-0.039i -0.056-0.113i]
- [0.618-0.018i -0.015-0.061i 0.167-0.044i -0.056-0.114i]
- [0.597+0.012i 0.029-0.038i 0.171-0.049i -0.056-0.115i]
- [0.575+0.043i 0.074-0.015i 0.175-0.054i -0.056-0.116i]]
+[[0.601-0.095i -0.223-0.634i 0.033+0.078i -0.002-0.061i]
+ [0.600-0.074i -0.209-0.651i 0.032+0.069i -0.005-0.062i]
+ [0.598-0.054i -0.196-0.665i 0.031+0.060i -0.007-0.063i]
+ [0.595-0.034i -0.184-0.676i 0.030+0.052i -0.009-0.064i]
+ [0.591-0.014i -0.173-0.685i 0.030+0.043i -0.012-0.065i]
+ [0.587+0.004i -0.162-0.691i 0.029+0.035i -0.014-0.066i]
+ [0.582+0.023i -0.152-0.694i 0.029+0.027i -0.016-0.067i]
+ [0.576+0.040i -0.143-0.695i 0.029+0.019i -0.018-0.067i]
+ [0.569+0.057i -0.134-0.693i 0.030+0.011i -0.020-0.068i]
+ [0.562+0.073i -0.126-0.688i 0.030+0.004i -0.022-0.068i]]
 
