@@ -1,3 +1,13 @@
+2006-12-07  Adam Piatyszek  <ediap@users.sourceforge.net>
+
+	* itpp/comm/channel.cpp, tests/channel_test.ref: Fixed a bug that
+	resulted in different output samples of the IFFT fading generator
+	on SPARC Solaris using GCC 3.4.5, than the ones obtained in other
+	enviroments. The problem was probably caused by a different order
+	of calculating the random arguments of the concat() function. Do
+	not know if this is a bug of GCC for Solaris, or it is not fully
+	specified behaviour in C/C++ standards.
+
 2006-12-07  Conrad Sanderson  <conrad_s@users.sourceforge.net>
 
 	* itpp/stat/mog_diag.h: Fixed small typo.
